2005-08-06  Rob Savoye  <rob@bertha.welcomehome.org>

	* snmp/POWERGURU-MIB.txt: Update the contact info.
	* lib/snmp.cc: Rename main() to master().
	* daemon/main.cc: Call SnmpDaemon::master() instead of
	SnmpDaemon::main().

2005-08-06  Rob Savoye  <rob@direwolf.welcomehome.org>

	* lib/serial.cc:  Cleanup compilation warnings about unused
	variables till -Wall is happy.
	* daemon/main.cc: Cleanup compilation warnings about unused
	variables till -Wall is happy.
	* lib/console.cc: Cleanup compilation warnings about unused
	variables till -Wall is happy.
	* lib/err.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/log.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/menuitem.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/mysql.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/outbackpower.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/proc.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/rc.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/sem.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/snmp.cc:  Cleanup compilation warnings about unused
	variables and no return values till -Wall is happy.
	* lib/xantrext-trace.cc:  Cleanup compilation warnings about
	unused variables and no return values till -Wall is happy.
	* lib/sem.h: Add pragma so we don't get buried in warnings as this
	is still mostly unimplemented, and totally unused for now.
	* macros/snmp.m4 (AC_PATH_SNMP): Edit out the -Wstrict-prototypes
	option net-snmp-config gives us, as it's not used for C++ code.