@@ -1,5 +1,7 @@
 2005-08-06  Rob Savoye  <rob@bertha.welcomehome.org>
 
+	* snmp/POWERGURU-MIB.txt: Use inassigned enterprise number.
+	* snmp/powerguru.c: Regenerated by mib2c.
 	* snmp/POWERGURU-MIB.txt: Update the contact info.
 	* lib/snmp.cc: Rename main() to master().
 	* daemon/main.cc: Call SnmpDaemon::master() instead of
